Accepted Strand's input that the variables should be full words to make the code more readable, and added comment lines to indicate the naming convention for the variable's contexts. Discovered source of bug was declaring that margin minus half the gutter is always being greater than or equal to zero... this was not trimming sufficient widths when the gutter was greater than twice the margin.

--- a/views/sass/_boxes.sass
+++ b/views/sass/_boxes.sass
@@ -23,45 +23,49 @@
   border  : $weight solid $color
 
 @mixin row($margin: 0%, $gutter: 0%)
-  display   : inline-block
-  $marg_p   : min($margin - $gutter / 2, 0)
-  $padd_p   : max($margin - $gutter / 2, 0)
-  $widt_p   : 100% - $marg_p
-  $p_to_r   : 100% / $widt_p
-  $padd_r   : $padd_p * $p_to_r
-  $widt_r   : $widt_p * $p_to_r - 2 * $padd_r
-  $trim_p   : $widt_r / $p_to_r
+  display       : block
+
+  //The calculations below contextually translate inputs for the end user
+  //Page context is what a user would see
+  //Row context is where the math is most convenient
+  //Trimmed row context is what the CSS understands.
+  $margin_page  : min($margin - $gutter / 2, 0)
+  $padding_page : $margin - $gutter / 2
+  $width_page   : 100% - $margin_page
+  $page_to_row  : 100% / $width_page
+  $padding_row  : $padding_page * $page_to_row
+  $width_row    : $width_page * $page_to_row - 2 * $padding_row
+  $trimmed_page : $width_row / $page_to_row
 
   margin:
-    left    : $marg_p
-  width     : $trim_p
+    left        : $margin_page
+  width         : $trimmed_page
   padding:
-    left    : $padd_r
-    right   : $padd_r
-  overflow  : hidden
+    left        : $padding_row
+    right       : $padding_row
 
-@mixin col($number_col: 1, $col_wide: 1, $margin: 0%, $gutter: 0%)
-  display   : block
-  $marg_p   : min($margin - $gutter / 2, 0)
-  $padd_p   : max($margin - $gutter / 2, 0)
-  $widt_p   : 100% - $marg_p
-  $p_to_r   : 100% / $widt_p
-  $padd_r   : $padd_p * $p_to_r
-  $widt_r   : $widt_p * $p_to_r - 2 * $padd_r
-  $trim_p   : $widt_r / $p_to_r
+@mixin col($number_columns: 1, $columns_wide: 1, $margin: 0%, $gutter: 0%)
+  display               : block
+  $margin_page          : min($margin - $gutter / 2, 0)
+  $padding_page         : $margin - $gutter / 2
+  $width_page           : 100% - $margin_page
+  $page_to_row          : 100% / $width_page
+  $padding_row          : $padding_page * $page_to_row
+  $width_row            : $width_page * $page_to_row - 2 * $padding_row
+  $trimmed_page         : $width_row / $page_to_row
 
-  $p_to_t   : 100% / $trim_p
+  $page_to_trimmed      : 100% / $trimmed_page
 
-  $marg_t   : $gutter / 2 * $p_to_t
+  $margin_trimmed       : $gutter / 2 * $page_to_trimmed
 
-  $add_col  : $number_col - 1
-  $colwidt_p: (100% - 2 * $margin - $add_col * $gutter) / ($add_col + 1)
-  $colwidt_t: $colwidt_p * $p_to_t
+  $added_columns        : $number_columns - 1
+  $column_width_page    : (100% - 2 * $margin - $added_columns * $gutter) / ($added_columns + 1)
+  $column_width_trimmed : $column_width_page * $page_to_trimmed
 
   margin:
-    left    : $marg_t
-    right   : $marg_t
-  width     : $colwidt_t
+    left                : $margin_trimmed
+    right               : $margin_trimmed
+  width                 : $column_width_trimmed
 
 %box
   -webkit-box-sizing    : border-box
